--- a/css/foundation.css
+++ b/css/foundation.css
@@ -31,7 +31,7 @@ body {
   font-size: 100%; }
 
 body {
-  background: white;
+  background: red; /* mettre un patter en full size */
   color: #222222;
   padding: 0;
   margin: 0;
