--- a/css/foundation.css
+++ b/css/foundation.css
@@ -31,7 +31,7 @@ body {
   font-size: 100%; }
 
 body {
-  background: red; /* mettre un patter en full size */
+  background: #B6C4C2; /* mettre un patter en full size */
   color: #222222;
   padding: 0;
   margin: 0;
@@ -2788,7 +2788,7 @@ a {
 p {
   font-family: inherit;
   font-weight: normal;
-  font-size: 1rem;
+  font-size: 1.1rem;
   line-height: 1.6;
   margin-bottom: 1.25rem;
   text-rendering: optimizeLegibility; }
