--- a/css/foundation.css
+++ b/css/foundation.css
@@ -31,7 +31,11 @@ body {
   font-size: 100%; }
 
 body {
-  background: #B6C4C2; /* mettre un patter en full size */
+  background: url(../img/cover.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   color: #222222;
   padding: 0;
   margin: 0;
